--- a/app/src/main/res/layout/view_eventmarker.xml
+++ b/app/src/main/res/layout/view_eventmarker.xml
@@ -43,12 +43,13 @@
         >
         <TextView
             android:id="@+id/description"
-            android:layout_width="190dp"
+            android:layout_width="338dp"
             android:layout_height="102dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="3dp"
 
+            android:editable="false"
             android:hint="@string/description_box"
             android:inputType="textCapSentences|textMultiLine"
             android:maxLength="1500"
@@ -56,9 +57,16 @@
             android:padding="10dp"
             android:scrollbars="vertical"
             android:textSize="18sp"
-            android:editable="false"
 
             />
+
+        <ImageView
+            android:id="@+id/joinEventRelatedChat"
+            android:layout_width="57dp"
+            android:layout_height="36dp"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/chat" />
+
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -84,7 +92,6 @@
                 android:text="Leave"
                 />
         </TableRow>
-
 
 
 
