Notifications when changing password

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -6,20 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".Users.ResetPasswordActivity">
 
+
+    <TextView
+        android:id="@+id/edit_text_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
     <EditText
         android:id="@+id/textInputOldPassword"
 
         android:layout_width="267dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="211dp"
         android:drawableStart="@drawable/ic_baseline_email_24"
-        android:ems="10"
 
+        android:ems="10"
         android:hint="Youre Password"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="230dp" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_text_title" />
 
     <EditText
         android:id="@+id/textInputNewPassword"
