--- a/app/src/main/res/layout/activity_facebook.xml
+++ b/app/src/main/res/layout/activity_facebook.xml
@@ -20,8 +20,8 @@
 
     <TextView
         android:id="@+id/tv_name"
-        android:layout_width="113dp"
-        android:layout_height="35dp"
+        android:layout_width="132dp"
+        android:layout_height="34dp"
         android:layout_marginTop="108dp"
         android:textAlignment="center"
         android:textSize="18sp"
@@ -39,8 +39,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_name"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        app:layout_constraintTop_toTopOf="@+id/tv_name"/>
 
     <com.facebook.share.widget.ShareButton
         android:id="@+id/sb_photo"
