--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,91 +7,104 @@
         android:id="@+id/main_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/backround_img_1"
+        android:background="@drawable/login4"
         tools:context=".Login.LoginActivity">
 
 
         <LinearLayout
-            android:layout_width="300dp"
-            android:layout_height="476dp"
+            android:layout_width="386dp"
+            android:layout_height="706dp"
             android:layout_gravity="center_horizontal"
-            android:layout_margin="60dp"
-            android:background="@color/white"
+            android:layout_margin="10dp"
             android:elevation="60dp"
             android:orientation="vertical"
             android:padding="10dp">
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:layout_marginTop="12dp"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="250dp"
+                android:layout_width="331dp"
                 android:layout_height="70dp"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginTop="160dp"
+                app:boxBackgroundColor="@color/white"
                 app:startIconDrawable="@drawable/ic_baseline_person_24">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/username_input"
-                    android:layout_width="250dp"
+                    android:layout_width="match_parent"
                     android:layout_height="60dp"
-                    android:inputType="textEmailAddress"
-                    android:hint="Enter your email-address"/>
+                    android:hint="Enter your email-address"
+                    android:inputType="textEmailAddress" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="250dp"
-                android:layout_height="80dp"
-                android:layout_marginTop="10dp"
+                android:layout_width="326dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
+
+                android:layout_marginTop="10dp"
+                app:boxBackgroundColor="@color/white"
                 app:endIconMode="password_toggle"
                 app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/password_input"
-                    android:layout_width="250dp"
-                    android:layout_height="50dp"
-                    android:inputType="textPassword"
-                    android:hint="Enter your password"/>
-
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:hint="Enter your password"
+                    android:inputType="textPassword" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:id="@+id/logIn_Button"
+                android:layout_width="249dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="180dp"
+                android:text="Log in"
+                android:fontFamily="serif"
+                android:shadowColor="#F44336"
+                android:textAlignment="center"
+                android:textAllCaps="true"
+                android:textColor="@color/white"
+                android:textStyle="bold|italic"
+                app:backgroundTint="#2B5B85"
+                app:cornerRadius="20dp"
+                app:iconTint="#AF2626"
+                app:rippleColor="#FF0606" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="107dp"
+                android:layout_height="34dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="15dp"
+                android:fontFamily="serif"
+                android:text="No account?"
+                android:textColor="@color/black"
+                android:textStyle="bold|italic" />
+
+            <Button
+                android:id="@+id/signUp_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="30dp"
-                android:fontFamily="sans-serif-black"
-                android:shadowColor="#F44336"
-                android:text="Log in"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                app:cornerRadius="4dp" />
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="15dp"
-                android:fontFamily="sans-serif-condensed-medium"
-                android:text="No account?"
-                android:textColor="@color/black" />
-
-            <Button
-                android:id="@+id/signUp_button"
-                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:fontFamily="sans-serif-black"
+                android:fontFamily="serif"
                 android:shadowColor="#F44336"
                 android:text="Sign Up"
-                android:textAllCaps="false"
-                android:textColor="@color/black"
-                app:cornerRadius="4dp" />
+                android:textAlignment="center"
+                android:textAllCaps="true"
+                android:textColor="@color/white"
+                android:textStyle="bold|italic"
+                app:backgroundTint="#2B5B85"
+                app:cornerRadius="20dp"
+                app:iconTint="#AF2626"
+                app:rippleColor="#FF0606" />
 
         </LinearLayout>
 
