--- a/app/src/main/res/layout/activity_facebook.xml
+++ b/app/src/main/res/layout/activity_facebook.xml
@@ -31,6 +31,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/iv_profilePic" />
 
+    <TextView
+        android:id="@+id/edit_text_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/iv_pic"
         android:layout_width="135dp"
