--- a/app/src/main/res/layout/fragment_profile_navigation_fragment.xml
+++ b/app/src/main/res/layout/fragment_profile_navigation_fragment.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/backkkkkkk"
     tools:context=".Users.ProfileNavigationFragment">
 
 
@@ -41,6 +42,7 @@
         android:text="Profile settings"
         android:textAllCaps="false"
         android:textColor="@color/black"
+        app:backgroundTint="@color/mainHani"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,6 +62,7 @@
         android:text="Dark mode"
         android:textAllCaps="false"
         android:textColor="@color/black"
+        app:backgroundTint="@color/mainHani"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,6 +73,7 @@
         android:drawableLeft="@drawable/ic_baseline_people_24"
         android:background="@drawable/setting_btn_layout"
         android:textColor="@color/black"
+        app:backgroundTint="@color/mainHani"
         android:textAllCaps="false"
         android:gravity="left|center_vertical"
         android:layout_width="340dp"
@@ -98,6 +102,7 @@
         android:text="Log out"
         android:textAllCaps="false"
         android:textColor="@color/black"
+        app:backgroundTint="@color/mainHani"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent"
@@ -116,6 +121,7 @@
         android:gravity="left|center_vertical"
         android:text="Language settings"
         android:textAllCaps="false"
+        app:backgroundTint="@color/mainHani"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -136,6 +142,7 @@
         android:text="Search Friends"
         android:textAllCaps="false"
         android:textColor="@color/black"
+        app:backgroundTint="@color/mainHani"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent"
