--- a/app/src/main/res/layout/all_users_display_layout.xml
+++ b/app/src/main/res/layout/all_users_display_layout.xml
@@ -12,7 +12,7 @@
         android:id="@+id/profile_image"
         android:layout_width="96dp"
         android:layout_height="96dp"
-        android:src="@drawable/profile"
+        android:src="@drawable/profile1"
         app:civ_border_color="#FF000000"
         app:civ_border_width="2dp" />
 
