--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -18,7 +18,7 @@
             android:layout_height="96dp"
             android:layout_marginStart="148dp"
             android:layout_marginTop="28dp"
-            android:src="@drawable/profile"
+            android:src="@drawable/profile1"
             app:civ_border_color="#FF000000"
             app:civ_border_width="2dp"
             app:layout_constraintStart_toStartOf="parent"
