--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="profileBackground">#67EFC8</color>
     <color name="profileBackground2">#63C9FF</color>
-
+    <color name="mainHani">#2B5B85</color>
 </resources>
