--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -4,8 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/profile1"
     tools:context=".Users.ResetPasswordActivity">
 
+    <FrameLayout
+        android:id="@+id/main_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="386dp"
+        android:layout_height="706dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="10dp"
+        android:elevation="60dp"
+        android:orientation="vertical"
+        android:padding="10dp">
 
     <TextView
         android:id="@+id/edit_text_title"
@@ -14,46 +28,66 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="331dp"
+        android:layout_height="70dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="160dp"
+        app:boxBackgroundColor="#DEE8F4"
+        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">
 
-    <EditText
-        android:id="@+id/textInputOldPassword"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textInputOldPassword"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:hint="Your password"
+            android:inputType="textEmailAddress" />
 
-        android:layout_width="267dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="211dp"
-        android:drawableStart="@drawable/ic_baseline_email_24"
+    </com.google.android.material.textfield.TextInputLayout>
 
-        android:ems="10"
-        android:hint="Youre Password"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_text_title" />
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="326dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            app:boxBackgroundColor="#DEE8F4"
+            app:endIconMode="password_toggle"
+            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">
 
-    <EditText
-        android:id="@+id/textInputNewPassword"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/textInputNewPassword"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:hint="New Password"
+                android:inputType="textPassword" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        android:layout_width="267dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:drawableStart="@drawable/ic_baseline_email_24"
-        android:ems="10"
 
-        android:hint="New Password"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputOldPassword" />
+        <Button
+            android:id="@+id/btnChange"
+            android:layout_width="249dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="serif"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="180dp"
+            android:shadowColor="#F44336"
+            android:text="Change Password "
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:textStyle="bold|italic"
+            app:backgroundTint="#2B5B85"
+            app:cornerRadius="20dp"
+            app:iconTint="#AF2626"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textInputNewPassword"
+            app:rippleColor="#FF0606" />
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/btnChange"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Change Password "
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputNewPassword" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
