--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -29,6 +29,7 @@
             android:padding="8dp"
             android:text=""
             android:background="@drawable/chat_background_right"
+            android:backgroundTint="@color/mainHani"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
