--- a/app/src/main/res/layout/activity_create_group.xml
+++ b/app/src/main/res/layout/activity_create_group.xml
@@ -11,28 +11,28 @@
         android:id="@+id/civ_group_create"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="136dp"
-        android:layout_marginEnd="176dp"
+        android:layout_marginTop="152dp"
+        android:layout_marginEnd="192dp"
         android:src="@drawable/ic_baseline_group_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/input_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="104dp"
-        android:padding="10dp"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="297dp"
+        android:layout_height="89dp"
+        android:layout_marginTop="30dp"
+        android:padding="0dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/civ_group_create">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/group_name_input"
-            android:hint="Enter group name"
-            android:layout_width="200dp"
-            android:layout_height="80dp" />
+            android:layout_width="260dp"
+            android:layout_height="80dp"
+            android:hint="Enter group name" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -43,9 +43,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="54dp"
         android:padding="5dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/input_layout">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -54,17 +54,17 @@
             android:layout_height="100dp"
             android:gravity="top"
             android:hint="Enter group description"
-            android:padding="10dp"
-            android:inputType="textMultiLine|textCapSentences" />
+            android:inputType="textMultiLine|textCapSentences"
+            android:padding="10dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/create_group_btn"
-        android:layout_width="155dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="140dp"
+        android:layout_width="108dp"
+        android:layout_height="101dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="160dp"
         android:background="@drawable/rounded_btn"
         android:drawableTop="@drawable/ic_baseline_create_24"
         android:shadowColor="@color/white"
