--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Chat.MessageActivity">
+    tools:context=".Chat.GroupChatActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/bar_layout"
@@ -44,7 +44,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/chat_view"
+        android:id="@+id/group_chat_view"
         android:background="@color/white"
         android:layout_below="@id/bar_layout"
         android:layout_above="@id/bottom_layout"
@@ -61,21 +61,21 @@
         android:padding="4dp">
 
         <EditText
-            android:id="@+id/send_text"
+            android:id="@+id/send_text_group"
             android:layout_width="260dp"
             android:layout_height="39dp"
             android:layout_alignParentTop="true"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="15dp"
             android:layout_marginRight="-290dp"
-            android:layout_toStartOf="@+id/sendBtn"
-            android:layout_toLeftOf="@id/send_text"
+            android:layout_toStartOf="@+id/sendBtnGroup"
+            android:layout_toLeftOf="@id/send_text_group"
             android:background="@drawable/edit_text_chat"
             android:hint="Type message"
             android:paddingLeft="5dp" />
 
         <ImageButton
-            android:id="@+id/sendBtn"
+            android:id="@+id/sendBtnGroup"
             android:layout_width="52dp"
             android:layout_height="50dp"
             android:layout_alignParentTop="true"
